Add screenshots to page content

--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@
                 </div>
             </div>
         </div>
+        <hr class="solid-divider">
+        <div class="screenshot-container">
+            <div class="row">
+                <div class="column">
+                    <img src="img/fivek-44mm-todayview.png" />
+                    <h3>Pre-workout Overview</h2>
+                </div>
+
+                <div class="column">
+                    <img src="img/fivek-44mm-warmup.png" />
+                    <h3>Warmup and Cooldown Intervals</h2>
+                </div>
+
+                <div class="column">
+                    <img src="img/fivek-44mm-postworkout.png" />
+                    <h3>Detailed Post Workout Data & Route Tracking</h2>
+                </div>
+            </div>
+        </div>
     </div>
     
     <div class="download-container">
