adding meta tag + updating app id

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>FiveK - Become a runner</title>
     <meta name="description" content="Improve your physical and mental well-being with FiveK. Go from couch to running 5KM in just 9 weeks!">
     <meta name="author" content="FiveK App">
-    
+    <meta name="apple-itunes-app" content="app-id=1497468062, affiliate-data=fivekwebsite">
+
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -19,7 +20,7 @@
         <div class="header-text">
             <h2>FiveK for Apple Watch</h2>
             <h1>Couch to 5K in 9 weeks.</h1>
-            <a href="https://apps.apple.com/app/id1516938102">
+            <a href="https://apps.apple.com/app/id1497468062">
                 <img src="img/appstore_button.svg" alt="" id="appstore-download">
             </a>
         </div>
@@ -76,7 +77,7 @@
     
     <div class="download-container">
         <h2>Start your fitness journey<br>today</h2>
-        <a href="https://apps.apple.com/app/id1516938102">
+        <a href="https://apps.apple.com/app/id1497468062">
             <img src="img/appstore_button.svg" alt="" id="appstore-download">
         </a>
         <p>&copy; FiveK 2020<br>Apple Watch and App Store are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
