Add redirect page + update T&Cs

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <a href="https://apps.apple.com/app/id1497468062">
             <img src="img/appstore_button.svg" alt="" id="appstore-download">
         </a>
-        <p>&copy; FiveK 2020<br>Apple Watch and App Store are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
+        <p>&copy; 2022 Camphor Digital Limited<br>Apple Watch and App Store are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
     </div>  
 </body>
 </html>
