--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <header>
     <div class="header-container">
         <div class="header-text">
-            <h2>FiveK for Apple Watch</h2>
-            <h1>Couch to 5K in 9 weeks.</h1>
+            <h2>Healthier Heart. Happier Mind.</h2>
+            <h1>Couch to 5K in 9 Weeks with FiveK.</h1>
             <a href="https://apps.apple.com/app/id1497468062">
                 <img src="img/appstore_button.svg" alt="" id="appstore-download">
             </a>
@@ -60,12 +60,12 @@
             <div class="row">
                 <div class="column">
                     <img src="img/fivek-44mm-todayview.png" />
-                    <h3>Pre-workout Overview</h2>
+                    <h3>Beautiful Workout Breakdowns</h2>
                 </div>
 
                 <div class="column">
-                    <img src="img/fivek-44mm-warmup.png" />
-                    <h3>Warmup and Cooldown Intervals</h2>
+                    <img src="img/fivek-44mm-small_workout.png" />
+                    <h3>Detailed Metrics & Warmup/Cooldown Intervals</h2>
                 </div>
 
                 <div class="column">
