--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </a>
         </div>
         <div class="header-img-container">
-            <img src="img/fivek-44mm-frame.png" alt="">
+            <img src="img/fivek-44mm-frame_22.png" alt="">
         </div>
     </div>
 </header>
@@ -59,17 +59,17 @@
         <div class="screenshot-container">
             <div class="row">
                 <div class="column">
-                    <img src="img/fivek-44mm-todayview.png" />
+                    <img src="img/fivek-44mm-todayview_22.png" />
                     <h3>Beautiful Workout Breakdowns</h2>
                 </div>
 
                 <div class="column">
-                    <img src="img/fivek-44mm-small_workout.png" />
+                    <img src="img/fivek-44mm-small_workout_22.png" />
                     <h3>Detailed Metrics & Warmup/Cooldown Intervals</h2>
                 </div>
 
                 <div class="column">
-                    <img src="img/fivek-44mm-postworkout.png" />
+                    <img src="img/fivek-44mm-postworkout_22.png" />
                     <h3>Detailed Post Workout Data & Route Tracking</h2>
                 </div>
             </div>
